--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,106 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+hr {
+  width: 90%;
+  float: left;
+}
+
+.select-card-wrapper {
+  display: flex;
+  width: 45%;
+  justify-content: space-between;
+  height: 30vh;
+}
+
+.select-card {
+  display: inline-block;
+  width: 15em;
+  height: 70%;
+
+  border-style: solid;
+  border-width: thin;
+  border-radius: 5px;
+
+  padding: 1em;
+
+  text-align: left;
+}
+
+.select-card:hover {
+  cursor: pointer;
+  background-color: lightgrey;
+} 
+
+.button-wrapper {
+  display: inline;
+  display: flex;
+  flex-direction: row;
+
+  width: 25%;
+
+  justify-content: space-around;
+
+  margin-top: 1em;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header-wrapper {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+h1, h2, button {
+  display: inline;
+}
+
+h3, h1 {
+  margin-bottom: 1vh;
+}
+
+label {
+  display: inline;
+}
+
+ul {
+  width: 10%;
+}
+
+button {
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  padding-right: 1vw;
+  padding-left: 1vw;
+
+  font-size: 95%;
+
+  border-style: solid;
+  border-width: thin;
+  border-radius: 5px;
+
+  background-color: inherit;
+}
+
+button:hover {
+ background-color: lightgrey; 
+}
+
+button:acive {
+ background-color: lightgrey;
+ transition: scale(1.5, 1.5); 
+}
+
+input {
+  display: inline;
+  margin: 1vh;
+  width: 45%;
+}
