--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,5 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: sans-serif;
 }
 
 hr {
@@ -73,8 +63,20 @@ h1, h2, button {
   display: inline;
 }
 
+h1 {
+  font-size: 180%;
+}
+
+h2 {
+  font-size: 140%;
+}
+
 h3, h1 {
   margin-bottom: 1vh;
+}
+
+h1, h2, h3 {
+  font-weight: normal;
 }
 
 label {
@@ -82,7 +84,7 @@ label {
 }
 
 ul {
-  width: 10%;
+  width: 12%;
 }
 
 button {
